--- a/styles/assets.css
+++ b/styles/assets.css
@@ -244,6 +244,7 @@ textarea::placeholder {
 #signup-password,
 #signup-confirm-password,
 #assigned-to,
+#assigned-to-edit-task,
 #due-date,
 #task-category,
 #contact-name,
